# obp-swagger-codegen

./: .gitignore  Makefile  README.md  config.json  pyproject.toml
src/obp_swagger_codegen/: main.py
tests/: test_main.py
