[tool.poetry]
name = "obp-swagger-codegen"
version = "0.1.0"
description = ""
authors = ["Mark Silva <mark.silva@tesobe.com>"]
readme = "README.md"
packages = [{include = "obp_swagger_codegen", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
twine = "^4.0.1"
build = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
autoflake = "^1.7.7"
flake8 = "^5.0.4"
mypy = "^0.991"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build_system]
requires = ["poetry_core"]
build_backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
max-line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.scripts]
generate = "obp_swagger_codegen.main:generate"
